--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,6 @@
         </div>
     </main>
     <section>
-
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card shadow-sm">
@@ -105,25 +104,28 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <div class="contact-items">
-            <div class="text-center">
-                <i class="fas fa-map-marker-alt fa-3x mb-3 text-primary"></i>
-                <h4>Ubicación</h4>
-                <p>Av. Corrientes 1445<br>Posadas, Misiones</p>
-            </div>
-            <div class="text-center">
-                <i class="fas fa-phone fa-3x mb-3 text-primary"></i>
-                <h4>Teléfono</h4>
-                <p>+549 (376) 4390808</p>
-            </div>
-            <div class="text-center">
-                <i class="fas fa-envelope fa-3x mb-3 text-primary"></i>
-                <h4>Email</h4>
-                <p>pablobaslini@gmail.com</p>
-            </div>
+    </div>
+
+    <div class="contact-items">
+        <div class="text-center">
+            <i class="fas fa-map-marker-alt fa-3x mb-3 text-primary"></i>
+            <h4>Ubicación</h4>
+            <p>Av. Corrientes 1445<br>Posadas, Misiones</p>
         </div>
+        <div class="text-center">
+            <i class="fas fa-phone fa-3x mb-3 text-primary"></i>
+            <h4>Teléfono</h4>
+            <p>+549 (376) 4390808</p>
         </div>
+        <div class="text-center">
+            <i class="fas fa-envelope fa-3x mb-3 text-primary"></i>
+            <h4>Email</h4>
+            <p>pablobaslini@gmail.com</p>
+        </div>
+    </div>
+    </div>
     </section>
     <footer class="footer-down">
         <div class="social-icons">
