--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -29,6 +29,17 @@
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <img src="../img/logo1.png" alt="logo animado">
+                <button class="cart-button btn btn-success" data-bs-toggle="dropdown" data-bs-auto-close="outside">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-cart" viewBox="0 0 16 16">
+                        <path
+                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                    </svg>
+                    Carrito
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" style="left: 50%; right: 50%;">
+                    <li>Carrito Vacio!!</li>
+                </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -48,7 +59,6 @@
                             </li>
 
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -66,22 +76,37 @@
                 <div class="titulo-tarjetas">
                     <h2>Corte de Tableros a medida</h2>
                     <img src="../img/corte servicios.jpg" width=300px alt="corte">
+                    <p>
+                        Precio: 5000$ por corte
+                    </p>
                     <div class="pie">
-                        <a href="../pages/contacto.html" class="btn btn-dark">Contáctenos</a>
+                        <a class="btn btn-dark"
+                            onclick="addToCart(5000, 'Corte de Tablero (1 corte)', '../img/corte servicios.jpg')">Agregar
+                            al carrito</a>
                     </div>
                 </div>
                 <div class="titulo-tarjetas">
                     <h2>Canteado ABS de piezas</h2>
                     <img src="../img/pegado servicios.jpg" width=300px alt="pegado">
+                    <p>
+                        Precio: 5000$ por pieza
+                    </p>
                     <div class="pie">
-                        <a href="../pages/contacto.html" class="btn btn-dark">Contáctenos</a>
+                        <a class="btn btn-dark"
+                            onclick="addToCart(5000, 'Canteado ABS (1 pieza)', '../img/pegado servicios.jpg')">Agregar
+                            al carrito</a>
                     </div>
                 </div>
                 <div class="titulo-tarjetas">
                     <h2>Maquinado de partes de muebles</h2>
                     <img src="../img/maquinado sericios.jpg" width=300px alt="maquinado">
+                    <p>
+                        Precio: 5000$ por pieza
+                    </p>
                     <div class="pie">
-                        <a href="../pages/contacto.html" class="btn btn-dark">Contáctenos</a>
+                        <a class="btn btn-dark"
+                            onclick="addToCart(5000, 'Maquinado (1 pieza)', '../img/maquinado sericios.jpg')">Agregar al
+                            carrito</a>
                     </div>
                 </div>
             </div>
@@ -108,5 +133,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
+<script src="../js/servicios.js"></script>
 
 </html>
